helmcharts/cityview-user-activity/chart/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: be-urbi-pro-user-activity
  namespace: urbi
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-share-token"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: urbi
  rules:
    - host: cityview.momah.gov.sa
      http:
        paths:
          - path: /api/discovery/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: urbi-pro-user-activity
                port:
                  number: 80
  tls:
    - hosts:
        - cityview.momah.gov.sa
